# tasks-api

./: Cargo.toml  Makefile  docker-compose.yml
core/: Cargo.toml
core/src/: errors.rs
domains/tasks/api/: Cargo.toml
domains/tasks/api/src/: main.rs
domains/tasks/api/src/task/: mod.rs
domains/tasks/api/src/task/handlers/: create.rs  delete.rs  get.rs  mod.rs  routes.rs  update.rs
domains/tasks/persistence/: Cargo.toml
domains/tasks/persistence/migrations/: 20241108123630_initial-setup.sql
domains/tasks/persistence/src/: lib.rs  migrations.rs
domains/tasks/persistence/src/connection/: postgres.rs
domains/tasks/persistence/src/task/: mod.rs  schema.rs
domains/tasks/persistence/src/task/transactions/: create.rs  delete.rs  fetch.rs  get.rs  mod.rs  update.rs
domains/tasks/service/: Cargo.toml
domains/tasks/service/src/task/: mod.rs  models.rs  service.rs
domains/tasks/service/src/task/actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
