[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.214", features = ["derive"]}
sqlx = {version = "0.8.2", features = ["postgres", "json", "chrono", "uuid", "runtime-tokio"]}
once_cell = "1.20.2"
tokio = {version = "1.41.1", features = ["full"]}

core = {path = "../../../core"}